feat: add "opened registration" filter to tournament exploration components and API
